History of Products.minaraad
============================

2.2.0 (unreleased)
------------------

- Added body text (label=summary) to Study. Study view shows new body text
  (=summary) field. Study listing shows summary instead of
  description. [reinout]

- Advisory listing shows summary instead of description. Re-labeled Advisory's
  body text as summary field. [reinout]

- Made the advisory listing similar to the study listing, apart from using the
  different date (day-month) instead of month-year for the study listing.
  [reinout]

- Changed goal field of Hearing to a richtext widget with accompagnying
  template changes.  [reinout]

- Added relatedDocuments field to Advisories, where you can select
  published Pages and Files from the 'digibib-1/dossiers-adviezen'
  path.  [maurits]

- Allow workflow transition between the restricted and published state
  and the other way around.  [maurits]

- Added 'Mijn abonnementen' action to personal portlet.  [maurits+simon]

- Made undo action invisible in portal_undo.  [maurits+simon]

- Added styling to the personal tools portlet.  Added 'My account' as
  portlet title. [simon+maurits]

- Added styling to hearing subscribe/unsubscribe. [simon+maurits]


2.1.7 (4 August 2008)
---------------------

- Changed heading for changed members as they are not always of the
  last month.  [maurits]


2.1.6 (4 August 2008)
---------------------

- Added form in minaraad_service for showing a list of changed
  members.  [maurits]

- Added minaraad_service to the control panel.  [maurits]

- Added some sample code from a zopectl debug session for returning a
  list of members that have (recently) been modified.  Minaraad may
  want that so I will include it here.  See
  browser/service.py:modified_members
  [maurits]

- Removed directory sync and file BeautifulSoup.py as they were only
  for the import of users, which was handled a few years ago.
  [maurits]


2.1.5 (8 July 2008)
-------------------
