@@ -4,6 +4,9 @@ History of Products.minaraad
 2.2.0 (unreleased)
 ------------------
 
+- Added external method for moving description to bodytext for
+  study/advisory.  [reinout]
+
 - Added body text (label=summary) to Study. Study view shows new body text
   (=summary) field. Study listing shows summary instead of
   description. [reinout]
